--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
   </head>
   <body class="d-flex h-100 text-center text-bg-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class='w-100'></div>
+    <div id="root" class="w-100"></div>
   </body>
 </html>
